k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dojopool
  labels:
    name: dojopool
    app: dojopool
