k8s/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dojopool-test
  namespace: dojopool
  labels:
    app: dojopool-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dojopool-test
  template:
    metadata:
      labels:
        app: dojopool-test
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '100m'
